--- a/index.css
+++ b/index.css
@@ -379,7 +379,12 @@ h1 {
 }
 @media (max-width: 991px) {
   .footer {
-    margin-top: 100vh;
+    margin-top: 150vh;
+  }
+}
+@media (max-width: 442px) {
+  .footer {
+    margin-top: 150vh;
   }
 }
 
@@ -387,6 +392,12 @@ h1 {
   list-style-type: none;
   border-top: solid white 2px;
   padding: 1rem;
+}
+@media (max-width: 442px) {
+  .footer-nav {
+    padding: 0;
+    font-size: 0.7rem;
+  }
 }
 .github-link {
   color: white;
