implement bs columns on flipcards

--- a/index.css
+++ b/index.css
@@ -2,12 +2,12 @@
 /* ***************************************************************************************  BANNER */
 /* ******************************************************************************************************************************** */
 body {
-  /* max-width: 100%; */
   overflow-x: hidden;
-  /* color: rgb(105, 105, 105); */
   background-color: rgba(30, 115, 172, 0.15);
   text-shadow: 0.05rem 0.05rem 0.1rem rgba(0, 0, 0, 0.3);
   font-family: "Montserrat", sans-serif;
+
+  min-height: 100vh;
 }
 
 header {
@@ -237,23 +237,27 @@ h1 {
     box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.85);
     padding: 0;
   }
+  #flip-card-bytesized {
+    margin-bottom: 300px;
+  }
   #flip-card-photography {
-    position: relative;
-    top: 300px;
+    margin-bottom: 300px;
   }
   #flip-card-todolist {
-    position: relative;
-    top: 600px;
+    margin-bottom: 300px;
   }
-  #flip-card-bytesized {
-    position: relative;
-    top: 900px;
+  #flip-card-bytesized2 {
+    margin-bottom: 300px;
   }
 }
 
 /* ******************************************************************************************************************************** */
 /* ***************************************************************************************  INDIVIDUAL PROJECT STYLES */
 /* ******************************************************************************************************************************** */
+
+#projects {
+  position: relative;
+}
 
 /* Bytesized Book Reviews */
 .bytesized-reviews-front {
@@ -371,33 +375,15 @@ h1 {
   padding-top: 1.5rem;
   background-color: rgba(50, 50, 150, 0.5);
 }
-@media (max-width: 1399px) {
+/* @media (max-width: 991px) {
   .footer {
-    margin: 0;
-    margin-top: 2rem;
+    display: none;
   }
-}
-@media (max-width: 991px) {
-  .footer {
-    margin-top: 150vh;
-  }
-}
-@media (max-width: 442px) {
-  .footer {
-    margin-top: 150vh;
-  }
-}
-
+} */
 .footer-nav {
   list-style-type: none;
   border-top: solid white 2px;
   padding: 1rem;
-}
-@media (max-width: 442px) {
-  .footer-nav {
-    padding: 0;
-    font-size: 0.7rem;
-  }
 }
 .github-link {
   color: white;
