begin adding Finance and Speller

--- a/index.css
+++ b/index.css
@@ -243,6 +243,16 @@ h1 {
   background-image: url("images/to-do-list.png");
 }
 
+/* CS50 Finance */
+.cs50-finance-front {
+  background-image: url("images/CS50Finance.png");
+}
+
+/* CS50 Speller */
+.cs50-speller-front {
+  background-image: url("images/CS50Speller.png");
+}
+
 /* ******************************************************************************************************************************** */
 /* ***************************************************************************************  PROJECTS FOR SMALLER DEVICES */
 /* ******************************************************************************************************************************** */
