remove to-do list and add shopping list

--- a/index.css
+++ b/index.css
@@ -238,9 +238,9 @@ h1 {
   background-image: url("images/photography.png");
 }
 
-/* To-Do List */
-.to-do-list-front {
-  background-image: url("images/to-do-list.png");
+/* Shopping List */
+.shopping-list-front {
+  background-image: url("images/shopping-list.png");
 }
 
 /* Finance */
