--- a/index.css
+++ b/index.css
@@ -239,7 +239,7 @@ h1 {
 }
 
 /* Shopping List */
-.shopping-list-front {
+.shopping-front {
   background-image: url("images/shopping-list.png");
 }
 
